# heap

./: .ghci  .gitignore  README.md  benchmark.csv  benchmark.html  heap.cabal  stack.yaml
benchmark/: benchmark.hs
src/Data/: Heap.hs  Logic.hs  Nat.hs  Ordered.hs
src/Data/Heap/: Unchecked.hs
src/Data/Nat/: Binary.hs  Peano.hs
src/Data/Nat/Binary/: Positive.hs
src/HAL/: Peano.hs
test/Data/: HeapSpec.hs
