name:                heap
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/brunjlar/heap#readme
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           Copyright: (c) 2016 Dr. Lars Brünjes
category:            Dependent Types
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Heap
                     , Data.Nat
  build-depends:       base >= 4.7 && < 5
                     , constraints
  default-language:    Haskell2010

test-suite heap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.HeapSpec
  main-is:             Spec.hs
  build-depends:       base
                     , heap
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/heap
