name:                heap
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/brunjlar/heap#readme
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           Copyright: (c) 2016 Dr. Lars Brünjes
category:            Dependent Types
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Heap
                     , Data.Logic
                     , Data.Nat.Binary
                     , Data.Nat.Binary.Positive
                     , Data.Nat.Peano
                     , Data.Ordered
  build-depends:       base >= 4.7 && < 5
                     , constraints
  ghc-options:         -O -Wall
  default-language:    Haskell2010

test-suite heap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Data.HeapSpec
                     , Data.MyPrelude
                     , Data.Utils.List
                     , Data.Utils.Random
                     , Data.Utils.Stack
                     , Data.Utils.Traversable
  main-is:             Spec.hs
  build-depends:       base
                     , array
                     , deepseq
                     , directory
                     , filepath
                     , heap
                     , hspec
                     , lens
                     , MonadRandom
                     , mtl
                     , STMonadTrans
                     , transformers
  ghc-options:         -O -Wall
  default-language:    Haskell2010

benchmark heap-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  other-modules:       Data.MyPrelude
                     , Data.Utils.List
                     , Data.Utils.Random
                     , Data.Utils.Stack
                     , Data.Utils.Traversable
  main-is:             benchmark.hs
  build-depends:       base >= 4.7 && < 5
                     , array
                     , criterion
                     , deepseq
                     , directory
                     , filepath
                     , heap
                     , lens
                     , MonadRandom
                     , mtl
                     , STMonadTrans
                     , transformers
  ghc-options:         -O -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/heap
